kube-thanos/thanos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-ingress
spec:
  ingressClassName: some-ingress-class
  rules:
    - host: thanos-query.<domain_name>.com
      http:
        paths:
          - backend:
              service:
                name: thanos-query
                port:
                  number: 9090
            path: /*
            pathType: Prefix
